<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".Activities.PhoneNumberActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="113dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/security"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verify_your_phone_number"
        android:textColor="#040303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/enter_the_otp_code_to_verify_you_re_phone_number"
        android:hint=""
        android:textColor="#0C0C0C"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textmobileshownumber"
        android:layout_width="244dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.358" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_3"
                android:layout_marginEnd="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_2"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_6"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_5"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_4"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />


            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/textbox_outline"
                android:gravity="center"
                android:hint="@string/_9"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Labelfor" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_recieve_the_otp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textviewotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp_again"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/verifybutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:backgroundTint="#07201E"
                android:text="@string/verify" />

            <ProgressBar
                android:id="@+id/progressbar_verify_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>